[package]
name = "darkwing-ducks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana Core
solana-sdk = "1.18"
solana-client = "1.18"

# Web Server & Utilities
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] } # Для генерации ID