[package]
name = "darkwing-ducks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana Core
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"

# Jito (MEV Protection)
# jito-protos = { git = "https://github.com/jito-foundation/jito-solana.git", package = "jito-protos" }
# tonic = { version = "0.9", features = ["tls", "tls-roots", "transport"] }
tokio = { version = "1.0", features = ["full"] }

# Web Server
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dashmap = "5.5"
chrono = "0.4"
dotenv = "0.15"

[[bin]]
name = "server"
path = "src/bin/server.rs"