[package]
name = "darkwing-ducks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Server
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
base64 = "0.21"
bincode = "1.3"

# Utilities
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
colored = "2.0" # For colorful terminal logs
clap = { version = "4.4", features = ["derive"] }

[lib]
name = "darkwing_ducks"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"